--- a/com.example.test.plugin2/.project
+++ b/com.example.test.plugin2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.example.test.plugin</name>
+	<name>com.example.test.plugin2</name>
 	<comment></comment>
 	<projects>
 	</projects>
